.provarCaches/00D5f000005vwGkEAI/objects/rstkf__apwhtcert__c.object
<CustomObject>
    <description>apwhtcert__c</description>
    <fields>
        <fullName>rstkf__altextid__c</fullName>
        <description>altextid</description>
        <externalId>true</externalId>
        <label>altextid</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstkf__apwhtcert_apwht__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>apwhtcert_apwht__c</description>
        <inlineHelpText>The Withholding Tax Class used for transactions on the Payment associated with this Certificate</inlineHelpText>
        <label>Withholding Tax Class</label>
        <referenceTo>rstkf__apwht__c</referenceTo>
        <relationshipLabel>Withholding Tax Certificate</relationshipLabel>
        <relationshipName>apwhtcerts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__apwhtcert_apwhtcertgrp__c</fullName>
        <label>Certificate Group</label>
        <referenceTo>rstkf__apwhtcertgrp__c</referenceTo>
        <relationshipLabel>Withholding Tax Certificate</relationshipLabel>
        <relationshipName>apwhtcerts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstkf__apwhtcert_certdate__c</fullName>
        <label>Certificate Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__apwhtcert_certificate__c</fullName>
        <label>Certificate Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>rstkf__apwhtcert_frtxndate__c</fullName>
        <label>From Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__apwhtcert_paydate__c</fullName>
        <description>apwhtcert_paydate__c</description>
        <inlineHelpText>The Date of the Payment associated with this Certificate</inlineHelpText>
        <label>Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__apwhtcert_pct__c</fullName>
        <formula>rstkf__apwhtcert_apwht__r.rstkf__apwht_pct__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>WHT Class Tax Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>rstkf__apwhtcert_povendcmpno__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Vendor Company</label>
        <referenceTo>rstkf__povendcmpno__c</referenceTo>
        <relationshipLabel>Withholding Tax Certificate</relationshipLabel>
        <relationshipName>Withholding_Tax_Certificate</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__apwhtcert_totamtpaid__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Amount Paid</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__apwhtcert_totxndate__c</fullName>
        <label>Thru Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__apwhtcert_txntotal__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Certificate Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__apwhtcert_txntotaltext__c</fullName>
        <label>Certificate Total in Words</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__apwhtcert_vendcity__c</fullName>
        <label>Vendor City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__apwhtcert_vendcountry__c</fullName>
        <label>Vendor Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__apwhtcert_vendname__c</fullName>
        <label>Vendor Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__apwhtcert_vendstate__c</fullName>
        <label>Vendor State/Province</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__apwhtcert_vendstreet__c</fullName>
        <label>Vendor Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__apwhtcert_vendzip__c</fullName>
        <label>Vendor Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__apwhtcert_whtpct__c</fullName>
        <description>apwhtcert_whtpct__c</description>
        <inlineHelpText>The Withholding Tax Percentage  used for transactions on the Payment associated with this Certificate</inlineHelpText>
        <label>WHT Percentage</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>rstkf__externalid__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstkf__formula_extid__c</fullName>
        <formula>null</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__formula_name__c</fullName>
        <formula>rstkf__apwhtcert_povendcmpno__r.rstkf__povendcmpno_vendno__r.rstk__povend_vendno__c + &apos;(&apos; + rstkf__apwhtcert_certificate__c + &apos;)&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__triggeroptions__c</fullName>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Withholding Tax Certificate</label>
    <nameField>
        <label>Withholding Tax Certificate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Withholding Tax Certificate</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>